--- a/src/app/ui/books/price-rent/price-rent.component.html
+++ b/src/app/ui/books/price-rent/price-rent.component.html
@@ -41,8 +41,8 @@
               </div>
               <div class="modal-body">
                 <div class="alert alert-warning">
-                  <li>Невозможно книга если есть книга с текущей обложкой</li>
-                  <li>Удаленный тип обложки невозможно восстановить</li>
+                  <li>Невозможно удалить если есть книга с текущей ценой</li>
+                  <li>Цену аренды невозможно восстановить</li>
                 </div>
               </div>
               <div class="modal-footer">
@@ -82,20 +82,16 @@
           </div>
           <div class="modal-body">
             <div class="alert alert-warning">
-              <li>Возрастное ограничение может содержать только цифры</li>
-              <li>Если возрастное ограничение имеет диапазон чисел, допустим между цифрами дефис и каждое число из диапазона должно содержать не более двух цифр</li>
-              <li>Если число не имеет диапазона должен быть знак "+" после числа</li>
+              <li>Цена аренды может содержать только положительные числа, если число не целое следует разделять точкой</li>
               <div class="alert alert-success"> Разрешено
-                <li> 16+ </li>
-                <li> 0-3 </li>
-                <li> 16-18 </li>
+                <li> 160 </li>
+                <li> 200 </li>
+                <li> 120.5 </li>
               </div>
               <div class="alert alert-danger"> Запрещено
-                <li> 12 </li>
                 <li> Десять </li>
-                <li> 16 18 </li>
+                <li> 900,9 </li>
                 <li> -9 </li>
-                <li> 100-150 </li>
               </div>
             </div>
           </div>
