--- a/src/app/ui/books/series-book/series-book.component.html
+++ b/src/app/ui/books/series-book/series-book.component.html
@@ -59,8 +59,8 @@
               </div>
               <div class="modal-body">
                 <div class="alert alert-warning">
-                  <li>Невозможно книга если есть книга с текущей обложкой</li>
-                  <li>Удаленный тип обложки невозможно восстановить</li>
+                  <li>Невозможно удалить если есть книга с текущей серией</li>
+                  <li>Удаленную серию невозможно восстановить</li>
                 </div>
               </div>
               <div class="modal-footer">
@@ -121,22 +121,14 @@
           </div>
           <div class="modal-body">
             <div class="alert alert-warning">
-              <li>Возрастное ограничение может содержать только цифры</li>
-              <li>Если возрастное ограничение имеет диапазон чисел, допустим между цифрами дефис и каждое число из
-                диапазона должно содержать не более двух цифр
-              </li>
-              <li>Если число не имеет диапазона должен быть знак "+" после числа</li>
+              <li>Название серии книг не может быть пустым</li>
               <div class="alert alert-success"> Разрешено
-                <li> 16+</li>
-                <li> 0-3</li>
-                <li> 16-18</li>
+                <li> 16Дней</li>
+                <li> Поиск сокровища</li>
+                <li> 3 глава</li>
               </div>
               <div class="alert alert-danger"> Запрещено
-                <li> 12</li>
-                <li> Десять</li>
-                <li> 16 18</li>
-                <li> -9</li>
-                <li> 100-150</li>
+                <li> " "</li>
               </div>
             </div>
           </div>
