--- a/src/app/ui/users/basket/basket.component.html
+++ b/src/app/ui/users/basket/basket.component.html
@@ -34,8 +34,7 @@
               </div>
               <div class="modal-body">
                 <div class="alert alert-warning">
-                  <li>Невозможно книга если есть книга с текущей обложкой</li>
-                  <li>Удаленный тип обложки невозможно восстановить</li>
+                  <li>Восстановить удаленную книгу из корзины не возможно</li>
                 </div>
               </div>
               <div class="modal-footer">
