--- a/src/app/ui/books/cover-types/cover-types.component.html
+++ b/src/app/ui/books/cover-types/cover-types.component.html
@@ -33,7 +33,7 @@
               </div>
               <div class="modal-body">
                 <div class="alert alert-warning">
-                  <li>Невозможно книга если есть книга с текущей обложкой</li>
+                  <li>Невозможно удалить если есть книга с текущей обложкой</li>
                   <li>Удаленный тип обложки невозможно восстановить</li>
                 </div>
               </div>
@@ -74,20 +74,17 @@
           </div>
           <div class="modal-body">
             <div class="alert alert-warning">
-              <li>Возрастное ограничение может содержать только цифры</li>
-              <li>Если возрастное ограничение имеет диапазон чисел, допустим между цифрами дефис и каждое число из диапазона должно содержать не более двух цифр</li>
-              <li>Если число не имеет диапазона должен быть знак "+" после числа</li>
+              <li>Тип обложки может содержать одну цифру и от одного до 5 слов</li>
               <div class="alert alert-success"> Разрешено
-                <li> 16+ </li>
-                <li> 0-3 </li>
-                <li> 16-18 </li>
+                <li> 8Z </li>
+                <li> Мягкий переплет </li>
+                <li> КСБ </li>
+                <li> Скрепление на пружину </li>
               </div>
               <div class="alert alert-danger"> Запрещено
-                <li> 12 </li>
-                <li> Десять </li>
-                <li> 16 18 </li>
-                <li> -9 </li>
-                <li> 100-150 </li>
+                <li> 123 ZY </li>
+                <li> 1000 1000 </li>
+                <li> 8Z Z Z Z Z Z </li>
               </div>
             </div>
           </div>
