--- a/src/app/ui/books/edition-language/edition-language.component.html
+++ b/src/app/ui/books/edition-language/edition-language.component.html
@@ -43,8 +43,8 @@
               </div>
               <div class="modal-body">
                 <div class="alert alert-warning">
-                  <li>Невозможно книга если есть книга с текущей обложкой</li>
-                  <li>Удаленный тип обложки невозможно восстановить</li>
+                  <li>Невозможно удалить если есть книга с текущим языком издания</li>
+                  <li>Язык издания издательство невозможно восстановить</li>
                 </div>
               </div>
               <div class="modal-footer">
@@ -84,20 +84,16 @@
           </div>
           <div class="modal-body">
             <div class="alert alert-warning">
-              <li>Возрастное ограничение может содержать только цифры</li>
-              <li>Если возрастное ограничение имеет диапазон чисел, допустим между цифрами дефис и каждое число из диапазона должно содержать не более двух цифр</li>
-              <li>Если число не имеет диапазона должен быть знак "+" после числа</li>
+              <li>Язык издания может содержать в себе только буквы </li>
               <div class="alert alert-success"> Разрешено
-                <li> 16+ </li>
-                <li> 0-3 </li>
-                <li> 16-18 </li>
+                <li> Русский </li>
+                <li> Английский </li>
+                <li> Японский язык  </li>
+
               </div>
               <div class="alert alert-danger"> Запрещено
-                <li> 12 </li>
-                <li> Десять </li>
-                <li> 16 18 </li>
-                <li> -9 </li>
-                <li> 100-150 </li>
+                <li> Русский1 </li>
+                <li> Японский_язык</li>
               </div>
             </div>
           </div>
