--- a/src/app/ui/menu/footer/footer.component.html
+++ b/src/app/ui/menu/footer/footer.component.html
@@ -35,20 +35,16 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Products
+            Общее
           </h6>
+
           <p>
-            <a href="#" class="text-reset">Angular</a>
+            <a href="#!" class="text-reset">Главная</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">React</a>
+            <a href="#" class="text-reset">Пользовательское соглашение</a>
           </p>
-          <p>
-            <a href="#!" class="text-reset">Vue</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Laravel</a>
-          </p>
+
         </div>
         <!-- Grid column -->
 
@@ -56,19 +52,13 @@
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
+            Полезные ссылки
           </h6>
           <p>
-            <a href="#!" class="text-reset">Pricing</a>
+            <a href="#!" class="text-reset">Книги</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Settings</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Orders</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Help</a>
+            <a href="#!" class="text-reset">Авторы</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -77,15 +67,15 @@
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Contact
+            Контакты
           </h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p><i class="fas fa-home me-3"></i> Россия, Воронеж, RU. Андрей Агеев</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
-            info@example.com
+            admin@library.ru
           </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+          <p><i class="fas fa-phone me-3"></i> + 7 920 409 41-88</p>
+          <p><i class="fas fa-print me-3"></i> + 7 950 000 55-00</p>
         </div>
         <!-- Grid column -->
       </div>
