--- a/src/app/ui/menu/top-menu/top-menu.component.html
+++ b/src/app/ui/menu/top-menu/top-menu.component.html
@@ -20,30 +20,27 @@
         <li class="nav-item">
           <a routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/authors">Авторы</a>
         </li>
-        <li class="nav-item">
-          <a routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/contact">Контакты</a>
-        </li>
-        <li *ngIf="!getLoggedInStatus()" class="nav-item">
-          <a  routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/promo_code">Промокод</a>
-        </li>
-<!--        <li *ngIf="token.getRole()+''==userService.getRoleWorker()||token.getRole()+''== userService.getRoleAdmin()"  class="nav-item dropdown">-->
-        <li   class="nav-item dropdown">
+<!--        <li class="nav-item">-->
+<!--          <a routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/contact">Контакты</a>-->
+<!--        </li>-->
+        <li *ngIf="token.getRole()+''==userService.getRoleWorker()||token.getRole()+''== userService.getRoleAdmin()"  class="nav-item dropdown">
+<!--        <li   class="nav-item dropdown">-->
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Меню работника
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a routerLinkActive="active" routerLink="/create-book" class="dropdown-item" href="#">Добавить книгу</a></li>
             <li><a routerLinkActive="active" routerLink="/create-authors" class="dropdown-item" href="#">Добавить автора</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/genre/list" class="dropdown-item" href="#">Жанры+</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/age-limit/list" class="dropdown-item" href="#">Возрастные ограничения +</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/translation" class="dropdown-item" href="#">Перевод книг + </a></li>
-            <li><a routerLinkActive="active" routerLink="/book/series" class="dropdown-item" href="#">Серия книг +</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/genre/list" class="dropdown-item" href="#">Жанры</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/age-limit/list" class="dropdown-item" href="#">Возрастные ограничения</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/translation" class="dropdown-item" href="#">Перевод книг </a></li>
+            <li><a routerLinkActive="active" routerLink="/book/series" class="dropdown-item" href="#">Серия книг</a></li>
             <li><a routerLinkActive="active" routerLink="/book/rent" class="dropdown-item" href="#">Список в аренде</a></li>
             <li><a routerLinkActive="active" routerLink="/book/rent-add" class="dropdown-item" href="#">Выдать в аренду</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/price-rent" class="dropdown-item" href="#">Стоимость аренды +-</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/cover-type" class="dropdown-item" href="#">Виды обложек+</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/publisher" class="dropdown-item" href="#">Издательства + </a></li>
-            <li><a routerLinkActive="active" routerLink="/book/edition-language" class="dropdown-item" href="#">Язык издания + </a></li>
+            <li><a routerLinkActive="active" routerLink="/book/price-rent" class="dropdown-item" href="#">Стоимость аренды</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/cover-type" class="dropdown-item" href="#">Виды обложек</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/publisher" class="dropdown-item" href="#">Издательства</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/edition-language" class="dropdown-item" href="#">Язык издания</a></li>
             <li><a routerLinkActive="active" routerLink="/book/rental-request-users" class="dropdown-item" href="#">Заявки на аренду </a></li>
           </ul>
         </li>
@@ -53,8 +50,6 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
             <li><a routerLinkActive="active" routerLink="/user/user-list" class="dropdown-item">Список пользователей</a></li>
-            <li><a routerLinkActive="active" routerLink="#" class="dropdown-item" href="#">Изменение статуса пользователя</a></li>
-            <li><a routerLinkActive="active" routerLink="/#" class="dropdown-item" href="#">Изменение статуса пользователя</a></li>
           </ul>
         </li>
       </ul>
